# basilisk

./: .gitignore  PLAN.md  README.md  pyproject.toml  test_query_parser.db
.claude/: CLAUDE.md  README.md  settings.local.json
basilisk/: __init__.py  associations.py  graphql_router.py  graphql_schema.py  mcp_router.py  permissions.py  query_parser.py  router.py
examples/: README.md  advanced_graphql_example.py  advanced_query_parsing_example.py  associations_example.py  basic_usage.py  combined_rest_and_graphql.py  graphql_usage.py  mcp_mode_example.py  rbac_example.py
tests/: __init__.py  test_associations.py  test_query_parser.py  test_router.py
